--- a/graphics/realized_price_g_dark.html
+++ b/graphics/realized_price_g_dark.html
@@ -80,7 +80,7 @@
                 }
             },
             title: {
-                text: '<a href="https://charts.bgeometrics.com">Bitcoin: Realized Price</a>',
+                text: ' Bitcoin: Realized Price',
                 align: 'left',
             },
 
