--- a/index_dark.html
+++ b/index_dark.html
@@ -489,7 +489,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="200px" src="graphics/price_heatmap.html" allow="fullscreen" title="BTC Price" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="200px" src="graphics/price_heatmap_dark_dark.html" allow="fullscreen" title="BTC Price" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -497,9 +497,9 @@
           <div class="row">
             <div class="col-xs-12 center-block text-center">
               <p>Historically in Bitcoin, green periods have been good times to buy and red periods have been good times to sell.
-                &nbsp;&nbsp;<a href="index.html">4 years</a>
-                &nbsp;&nbsp;<a href="index_6m.html">180 days</a>
-                &nbsp;&nbsp;<a href="index_3m.html">90 days</a>
+                &nbsp;&nbsp;<a href="index_dark_dark.html">4 years</a>
+                &nbsp;&nbsp;<a href="index_6m_dark_dark.html">180 days</a>
+                &nbsp;&nbsp;<a href="index_3m_dark_dark.html">90 days</a>
               </p>
             </div>
           </div>
@@ -507,7 +507,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/mvrv_heatmap.html" allow="fullscreen" title="MVRV Z-Score" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/mvrv_heatmap_dark_dark.html" allow="fullscreen" title="MVRV Z-Score" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -515,7 +515,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/nupl_heatmap.html" allow="fullscreen" title="NUPL" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/nupl_heatmap_dark_dark.html" allow="fullscreen" title="NUPL" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -523,7 +523,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/lth_heatmap.html" allow="fullscreen" title="LTH diff" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/lth_heatmap_dark_dark.html" allow="fullscreen" title="LTH diff" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -531,7 +531,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/realized_profit_loss_ratio_heatmap.html" allow="fullscreen" title="Realized Profit Loss Ratio" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/realized_profit_loss_ratio_heatmap_dark_dark.html" allow="fullscreen" title="Realized Profit Loss Ratio" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -545,7 +545,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Price History</h5>
-              <a href="bitcoin_price_usd_g.html">
+              <a href="bitcoin_price_usd_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-price-history.png" class="card-img-top" alt="Bitcoin Price USD">
               </a>
             </div>
@@ -556,7 +556,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Realized Price</h5>
-              <a href="realized_price_g.html">
+              <a href="realized_price_g_dark_dark.html">
                 <img src="assets/img/gallery/realized_price.png" class="card-img-top" alt="Bitcoin Realized Price">
               </a>
             </div>
@@ -567,7 +567,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin SOPR</h5>
-              <a href="sopr.html">
+              <a href="sopr_dark_dark.html">
                 <img src="assets/img/gallery/sopr.png" class="card-img-top" alt="Bitcoin SOPR">
               </a>
             </div>
@@ -578,7 +578,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin MVRV</h5>
-              <a href="mvrv.html">
+              <a href="mvrv_dark_dark.html">
                 <img src="assets/img/gallery/mvrv.png" class="card-img-top" alt="Bitcoin MVRV">
               </a>
             </div>
@@ -589,7 +589,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Hodl Waves</h5>
-              <a href="hodl_waves.html">
+              <a href="hodl_waves_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-hodl-waves-relative.png" class="card-img-top" alt="Bitcoin Hodl Waves">
               </a>
             </div>
@@ -600,7 +600,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Moving Average</h5>
-              <a href="moving_average.html">
+              <a href="moving_average_dark_dark.html">
                 <img src="assets/img/gallery/moving_average.png" class="card-img-top" alt="Bitcoin Moving Average">
               </a>
             </div>
@@ -611,7 +611,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin OHLC</h5>
-              <a href="ohlc.html">
+              <a href="ohlc_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin_ohlc.png" class="card-img-top" alt="Bitcoin OHLC">
               </a>
             </div>
@@ -622,7 +622,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin NUPL</h5>
-              <a href="bitcoin_nupl_g.html">
+              <a href="bitcoin_nupl_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-nupl.png" class="card-img-top" alt="Bitcoin NUPL">
               </a>
             </div>
@@ -633,7 +633,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin STH Realized Price</h5>
-              <a href="bitcoin_realized_short_g.html">
+              <a href="bitcoin_realized_short_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-realized-short.png" class="card-img-top" alt="Bitcoin STH Realized Price">
               </a>
             </div>
@@ -644,7 +644,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Capitalization</h5>
-              <a href="capitalization.html">
+              <a href="capitalization_dark_dark.html">
                 <img src="assets/img/gallery/capitalization.png" class="card-img-top" alt="Bitcoin Capitalization">
               </a>
             </div>
@@ -655,7 +655,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Coin Days Destroyed</h5>
-              <a href="bitcoin_cdd_ajusted_90dma_g.html">
+              <a href="bitcoin_cdd_ajusted_90dma_g_dark_dark.html">
                 <img src="assets/img/gallery/cdd.png" class="card-img-top" alt="Bitcoin CDD Ajusted">
               </a>
             </div>
@@ -666,7 +666,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Change Held on Exchanges</h5>
-              <a href="bitcoin_ex_change_held_g.html">
+              <a href="bitcoin_ex_change_held_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-ex-change-held.png" class="card-img-top" alt="Bitcoin Change Held on Exchanges">
               </a>
             </div>
@@ -677,7 +677,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin S&P 500, Gold, Tesla</h5>
-              <a href="sp500_gold.html">
+              <a href="sp500_gold_dark_dark.html">
                 <img src="assets/img/gallery/sp500_gold.png" class="card-img-top" alt="Bitcoin S&P 500, Gold, Tesla">
               </a>
             </div>
@@ -688,7 +688,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Fear and Greed</h5>
-              <a href="bitcoin_fear_greed_img.html">
+              <a href="bitcoin_fear_greed_img_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-fear-greed.png" class="card-img-top" alt="Bitcoin Fear and Greed">
               </a>
             </div>
@@ -699,7 +699,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin AVIV</h5>
-              <a href="bitcoin_aviv_g.html">
+              <a href="bitcoin_aviv_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-aviv.png" class="card-img-top" alt="Bitcoin AVIV">
               </a>
             </div>
@@ -710,7 +710,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Price Radar Chart</h5>
-              <a href="bitcoin_halving_radar_g.html">
+              <a href="bitcoin_halving_radar_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-4-year-cycle.png" class="card-img-top" alt="Bitcoin Price Halving Radar Chart">
               </a>
             </div>
@@ -721,7 +721,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Candles Yearly</h5>
-              <a href="bitcoin_year_candle_g.html">
+              <a href="bitcoin_year_candle_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-yearly-candles.png" class="card-img-top" alt="Bitcoin Candles Yearly">
               </a>
             </div>
@@ -732,7 +732,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin on a day like today</h5>
-              <a href="bitcoin_price_usd_day_g.html">
+              <a href="bitcoin_price_usd_day_g_dark_dark.html">
                 <img src="assets/img/gallery/bitcoin-price-usd-day.png" class="card-img-top" alt="Bitcoin on a day like today">
               </a>
             </div>
