--- a/bitcoin_halving_month_g_dark.html
+++ b/bitcoin_halving_month_g_dark.html
@@ -477,24 +477,314 @@
 
   <main id="main" class="main">
 
-    <section class="section dashboard">
+    <section class="section">
       <div class="row">
         <div id="searchResults"></div>
 
-        <!-- Left side columns -->
+      	<div class="pagetitle">
+	        <h1>Bitcoin On-Chain Analytics</h1>
+      	</div>
+
         <div class="col-lg-12">
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="600px" src="reports/bitcoin_halving_month_g.html" allow="fullscreen" title="Halving Month" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="200px" src="graphics/price_heatmap_dark_dark.html" allow="fullscreen" title="BTC Price" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
-
           </div>
-        </div><!-- End Left side columns -->
 
+          <div class="row">
+            <div class="col-xs-12 center-block text-center">
+              <p>Historically in Bitcoin, green periods have been good times to buy and red periods have been good times to sell.
+                &nbsp;&nbsp;<a href="index_dark_dark.html">4 years</a>
+                &nbsp;&nbsp;<a href="index_6m_dark_dark.html">180 days</a>
+                &nbsp;&nbsp;<a href="index_3m_dark_dark.html">90 days</a>
+              </p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div id="container-iframe" class="row d-flex justify-content-center">
+              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
+                <iframe class="iframe" width="100%" height="80px" src="graphics/mvrv_heatmap_dark_dark.html" allow="fullscreen" title="MVRV Z-Score" scrolling="no" frameBorder="0"></iframe>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div id="container-iframe" class="row d-flex justify-content-center">
+              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
+                <iframe class="iframe" width="100%" height="80px" src="graphics/nupl_heatmap_dark_dark.html" allow="fullscreen" title="NUPL" scrolling="no" frameBorder="0"></iframe>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div id="container-iframe" class="row d-flex justify-content-center">
+              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
+                <iframe class="iframe" width="100%" height="80px" src="graphics/lth_heatmap_dark_dark.html" allow="fullscreen" title="LTH diff" scrolling="no" frameBorder="0"></iframe>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div id="container-iframe" class="row d-flex justify-content-center">
+              <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
+                <iframe class="iframe" width="100%" height="80px" src="graphics/realized_profit_loss_ratio_heatmap_dark_dark.html" allow="fullscreen" title="Realized Profit Loss Ratio" scrolling="no" frameBorder="0"></iframe>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
+
+      <div class="row">
+        <div class="col-lg-4">
+
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Price History</h5>
+              <a href="bitcoin_price_usd_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-price-history.png" class="card-img-top" alt="Bitcoin Price USD">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Realized Price</h5>
+              <a href="realized_price_g_dark_dark.html">
+                <img src="assets/img/gallery/realized_price.png" class="card-img-top" alt="Bitcoin Realized Price">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin SOPR</h5>
+              <a href="sopr_dark_dark.html">
+                <img src="assets/img/gallery/sopr.png" class="card-img-top" alt="Bitcoin SOPR">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin MVRV</h5>
+              <a href="mvrv_dark_dark.html">
+                <img src="assets/img/gallery/mvrv.png" class="card-img-top" alt="Bitcoin MVRV">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Hodl Waves</h5>
+              <a href="hodl_waves_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-hodl-waves-relative.png" class="card-img-top" alt="Bitcoin Hodl Waves">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Moving Average</h5>
+              <a href="moving_average_dark_dark.html">
+                <img src="assets/img/gallery/moving_average.png" class="card-img-top" alt="Bitcoin Moving Average">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin OHLC</h5>
+              <a href="ohlc_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin_ohlc.png" class="card-img-top" alt="Bitcoin OHLC">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin NUPL</h5>
+              <a href="bitcoin_nupl_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-nupl.png" class="card-img-top" alt="Bitcoin NUPL">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin STH Realized Price</h5>
+              <a href="bitcoin_realized_short_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-realized-short.png" class="card-img-top" alt="Bitcoin STH Realized Price">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Capitalization</h5>
+              <a href="capitalization_dark_dark.html">
+                <img src="assets/img/gallery/capitalization.png" class="card-img-top" alt="Bitcoin Capitalization">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Coin Days Destroyed</h5>
+              <a href="bitcoin_cdd_ajusted_90dma_g_dark_dark.html">
+                <img src="assets/img/gallery/cdd.png" class="card-img-top" alt="Bitcoin CDD Ajusted">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Change Held on Exchanges</h5>
+              <a href="bitcoin_ex_change_held_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-ex-change-held.png" class="card-img-top" alt="Bitcoin Change Held on Exchanges">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin S&P 500, Gold, Tesla</h5>
+              <a href="sp500_gold_dark_dark.html">
+                <img src="assets/img/gallery/sp500_gold.png" class="card-img-top" alt="Bitcoin S&P 500, Gold, Tesla">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Fear and Greed</h5>
+              <a href="bitcoin_fear_greed_img_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-fear-greed.png" class="card-img-top" alt="Bitcoin Fear and Greed">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin AVIV</h5>
+              <a href="bitcoin_aviv_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-aviv.png" class="card-img-top" alt="Bitcoin AVIV">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Price Radar Chart</h5>
+              <a href="bitcoin_halving_radar_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-4-year-cycle.png" class="card-img-top" alt="Bitcoin Price Halving Radar Chart">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin Candles Yearly</h5>
+              <a href="bitcoin_year_candle_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-yearly-candles.png" class="card-img-top" alt="Bitcoin Candles Yearly">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Bitcoin on a day like today</h5>
+              <a href="bitcoin_price_usd_day_g_dark_dark.html">
+                <img src="assets/img/gallery/bitcoin-price-usd-day.png" class="card-img-top" alt="Bitcoin on a day like today">
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+      </div>              
+
     </section>
+
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer" class="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>BGeometrics</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <strong>Past performance is no guarantee of future results.</strong></br>
+        <strong>It is not investment advice. Find out for yourself and act under your own criteria.</strong>
+      </div>
+      <div class="credits">
+        Power by <a href="https://bgeometrics.com/">BGeometrics</a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <div id="preloader">
+    <div class="line"></div>
+  </div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/chart.js/chart.umd.js"></script>
+  <script src="assets/vendor/echarts/echarts.min.js"></script>
+  <script src="assets/vendor/quill/quill.min.js"></script>
+  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
+  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/bgeometrics.js"></script>
+
+</body>
+
+</html>
+
 
   </main><!-- End #main -->
 
