--- a/index_dark.html
+++ b/index_dark.html
@@ -489,7 +489,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="200px" src="graphics/price_heatmap_dark.html" allow="fullscreen" title="BTC Price" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="200px" src="graphics/price_heatmap.html" allow="fullscreen" title="BTC Price" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -507,7 +507,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/mvrv_heatmap_dark.html" allow="fullscreen" title="MVRV Z-Score" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/mvrv_heatmap.html" allow="fullscreen" title="MVRV Z-Score" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -515,7 +515,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/nupl_heatmap_dark.html" allow="fullscreen" title="NUPL" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/nupl_heatmap.html" allow="fullscreen" title="NUPL" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -523,7 +523,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/lth_heatmap_dark.html" allow="fullscreen" title="LTH diff" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/lth_heatmap.html" allow="fullscreen" title="LTH diff" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
@@ -531,7 +531,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="80px" src="graphics/realized_profit_loss_ratio_heatmap_dark.html" allow="fullscreen" title="Realized Profit Loss Ratio" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="80px" src="graphics/realized_profit_loss_ratio_dark.html" allow="fullscreen" title="Realized Profit Loss Ratio" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
           </div>
