--- a/graphics/price_heatmap_6m.html
+++ b/graphics/price_heatmap_6m.html
@@ -15,8 +15,6 @@
     <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
-    <script src="https://charts.bgeometrics.com/assets/js/themes/brand-dark.js"></script>
-
     <div id="container-iframe" style="width:100%; height:200px; margin: 0 auto;"></div>
 
     <script>
@@ -33,7 +31,7 @@
                 enabled: false
 			},
             title: {
-                text: '<a href="https://charts.bgeometrics.com/ohlc.html" style="color:#dddddd;" target="_blank">Bitcoin price in the last 180 days</a>',
+                text: '<a href="https://charts.bgeometrics.com/ohlc.html" target="_blank">Bitcoin price in the last 180 days</a>',
                 align: 'left',
                 fontSize: '9px', 
             },
