--- a/graphics/nupl_heatmap_dark.html
+++ b/graphics/nupl_heatmap_dark.html
@@ -35,7 +35,7 @@
                 },
 
                 title: {
-                    text: '<a href="https://charts.bgeometrics.com/nupl.html" target="_blank" style="color:#222222">NUPL in the last 4 years</a>',
+                    text: '<a href="https://charts.bgeometrics.com/nupl.html" target="_blank" style="color:#dddddd">NUPL in the last 4 years</a>',
                     align: 'left',
                     style: {
                         fontSize: '14px'
