--- a/tools/web-generation-model-end-index-6m-dark.html
+++ b/tools/web-generation-model-end-index-6m-dark.html
@@ -20,9 +20,9 @@
           <div class="row">
             <div class="col-xs-12 center-block text-center">
               <p>Historically in Bitcoin, green periods have been good times to buy and red periods have been good times to sell.
-                &nbsp;&nbsp;<a href="index_dark.html">4 years</a>
-                &nbsp;&nbsp;<a href="index_dark_6m.html">180 days</a>
-                &nbsp;&nbsp;<a href="index_dark_3m.html">90 days</a>
+	        &nbsp;&nbsp;<a href="index_dark.html">4 years</a>
+                &nbsp;&nbsp;<a href="index_6m_dark.html">180 days</a>
+                &nbsp;&nbsp;<a href="index_3m_dark.html">90 days</a>
               </p>
             </div>
           </div>
