--- a/bitcoin_distribution_coin_g_shrimp.html
+++ b/bitcoin_distribution_coin_g_shrimp.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="Address Coins Shark 100 to 1K BTC" name="keywords">
+  <meta content="Address Coins Shimp < 1 BTC" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -486,7 +486,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="600px" src="reports/bitcoin_distribution_coin_g_shark.html" allow="fullscreen" title="Address Coins Shark 100 to 1K BTC" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="reports/bitcoin_distribution_coin_g_shimp.html" allow="fullscreen" title="Address Coins Shimp < 1 BTC" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
