--- a/graphics/distribution_realized_price.html
+++ b/graphics/distribution_realized_price.html
@@ -68,7 +68,7 @@
                         description: 'BTC price'
                     },
                     plotLines: [{
-                        color: 'gray',
+                        color: 'black',
                         width: 2,
                         value: data_price_index,
                         label: {
