--- a/graphics/distribution_realized_price_dark.html
+++ b/graphics/distribution_realized_price_dark.html
@@ -70,7 +70,7 @@
                         description: 'BTC price'
                     },
                     plotLines: [{
-                        color: 'gray',
+                        color: 'black',
                         width: 2,
                         value: data_price_index,
                         label: {
