--- a/graphics/distribution_realized_price.html
+++ b/graphics/distribution_realized_price.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin Distribution Realized Price</title>
+    <title>Bitcoin Realized Price Distribution (URPD)</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -55,7 +55,7 @@
                     }
                 },
                 title: {
-                    text: 'Bitcoin Distribution Realized Price (URPD)',
+                    text: 'Bitcoin Realized Price Distribution (URPD)',
                     align: 'left'
                 },
                 xAxis: {
