--- a/bitcoin_price_usd_g_dark.html
+++ b/bitcoin_price_usd_g_dark.html
@@ -112,7 +112,7 @@
         <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-menu-button-wide"></i><span>Price</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="components-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+        <ul id="components-nav" class="nav-content" data-bs-parent="#sidebar-nav">
           <li>
             <a href="bitcoin_price_usd_g_dark.html">
               <i class="bi bi-circle"></i><span>Bitcoin Price</span>
