--- a/bitcoin_cdd_ajusted_90dma_g.html
+++ b/bitcoin_cdd_ajusted_90dma_g.html
@@ -265,7 +265,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_cdd_ajusted_90dma_g.html">
+            <a href="bitcoin_cdd_ajusted_90dma_g.html" class="active">
               <i class="bi bi-circle"></i><span>CDD Ajusted 90dma</span>
             </a>
           </li>
