--- a/bitcoin_distribution_addr_tables_dark.html
+++ b/bitcoin_distribution_addr_tables_dark.html
@@ -293,7 +293,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_distribution_addr_tables_dark.html">
+            <a href="bitcoin_distribution_addr_tables_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Addresses Distribution</span>
             </a>
           </li>
