--- a/bitcoin_distribution_coin_g.html
+++ b/bitcoin_distribution_coin_g.html
@@ -298,7 +298,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_distribution_coin_g.html">
+            <a href="bitcoin_distribution_coin_g.html" class="active">
               <i class="bi bi-circle"></i><span>Coins</span>
             </a>
           </li>
