--- a/bitcoin_distribution_coin_g_whale_dark.html
+++ b/bitcoin_distribution_coin_g_whale_dark.html
@@ -308,7 +308,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_distribution_coin_g_whale_dark.html">
+            <a href="bitcoin_distribution_coin_g_whale_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Coins Whale 1K - 10K BTC</span>
             </a>
           </li>
