--- a/bitcoin_distribution_coins_tables_dark.html
+++ b/bitcoin_distribution_coins_tables_dark.html
@@ -288,7 +288,7 @@
         </a>
         <ul id="address-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="bitcoin_distribution_coins_tables_dark.html">
+            <a href="bitcoin_distribution_coins_tables_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Coins Distribution</span>
             </a>
           </li>
