--- a/bitcoin_ex_change_held_g.html
+++ b/bitcoin_ex_change_held_g.html
@@ -396,7 +396,7 @@
         </a>
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="bitcoin_ex_change_held_g.html">
+            <a href="bitcoin_ex_change_held_g.html" class="active">
               <i class="bi bi-circle"></i><span>Change BTC on exchanges</span>
             </a>
           </li>
