--- a/bitcoin_fear_greed_img_dark.html
+++ b/bitcoin_fear_greed_img_dark.html
@@ -401,7 +401,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_fear_greed_img_dark.html">
+            <a href="bitcoin_fear_greed_img_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Fear and Greed index color</span>
             </a>
           </li>
