--- a/bitcoin_halving_cycle_g_dark.html
+++ b/bitcoin_halving_cycle_g_dark.html
@@ -172,7 +172,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_halving_cycle_g_dark.html">
+            <a href="bitcoin_halving_cycle_g_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Halving Cycle</span>
             </a>
           </li>
