--- a/bitcoin_halving_month_g_dark.html
+++ b/bitcoin_halving_month_g_dark.html
@@ -167,7 +167,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_halving_month_g_dark.html">
+            <a href="bitcoin_halving_month_g_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Halving Month</span>
             </a>
           </li>
