--- a/bitcoin_hashprice_g.html
+++ b/bitcoin_hashprice_g.html
@@ -421,7 +421,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_hashprice_g.html">
+            <a href="bitcoin_hashprice_g.html" class="active">
               <i class="bi bi-circle"></i><span>Bitcoin Hashprice</span>
             </a>
           </li>
