--- a/bitcoin_hashribbons_g.html
+++ b/bitcoin_hashribbons_g.html
@@ -426,7 +426,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_hashribbons_g.html">
+            <a href="bitcoin_hashribbons_g.html" class="active">
               <i class="bi bi-circle"></i><span>Bitcoin Hashribbons</span>
             </a>
           </li>
