--- a/bitcoin_price_g_log.html
+++ b/bitcoin_price_g_log.html
@@ -152,7 +152,7 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="bitcoin_price_g_log.html">
+            <a href="bitcoin_price_g_log.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Price Log</span>
             </a>
           </li>
