--- a/bitcoin_price_usd_day_g_dark.html
+++ b/bitcoin_price_usd_day_g_dark.html
@@ -134,7 +134,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_price_usd_day_g_dark.html">
+            <a href="bitcoin_price_usd_day_g_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Price a day like</span>
             </a>
           </li>
