--- a/bitcoin_volatility_g_dark.html
+++ b/bitcoin_volatility_g_dark.html
@@ -411,7 +411,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_volatility_g_dark.html">
+            <a href="bitcoin_volatility_g_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Volatility</span>
             </a>
           </li>
