--- a/capitalization.html
+++ b/capitalization.html
@@ -129,7 +129,7 @@
             </a>
           </li>
           <li>
-            <a href="capitalization.html">
+            <a href="capitalization.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Capitalization</span>
             </a>
           </li>
