--- a/distribution_addr_whale.html
+++ b/distribution_addr_whale.html
@@ -338,7 +338,7 @@
             </a>
           </li>
           <li>
-            <a href="distribution_addr_whale.html">
+            <a href="distribution_addr_whale.html" class="active">
               <i class="bi bi-circle"></i><span>Addr Whale 1K - 10K BTC</span>
             </a>
           </li>
