--- a/distribution_realized_price.html
+++ b/distribution_realized_price.html
@@ -250,7 +250,7 @@
             </a>
           </li>
           <li>
-            <a href="distribution_realized_price.html">
+            <a href="distribution_realized_price.html" class="active">
               <i class="bi bi-circle"></i><span>Realized Price Distribution</span>
             </a>
           </li>
