--- a/hodl_waves_dark.html
+++ b/hodl_waves_dark.html
@@ -190,7 +190,7 @@
             </a>
           </li>
           <li>
-            <a href="hodl_waves_dark.html">
+            <a href="hodl_waves_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Hodl Waves</span>
             </a>
           </li>
