--- a/hodl_waves_realized_cap_dark.html
+++ b/hodl_waves_realized_cap_dark.html
@@ -195,7 +195,7 @@
             </a>
           </li>
           <li>
-            <a href="hodl_waves_realized_cap_dark.html">
+            <a href="hodl_waves_realized_cap_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Hodl Waves Realized Cap</span>
             </a>
           </li>
