--- a/lth_mvrv_dark.html
+++ b/lth_mvrv_dark.html
@@ -245,7 +245,7 @@
             </a>
           </li>
           <li>
-            <a href="lth_mvrv_dark.html">
+            <a href="lth_mvrv_dark.html" class="active">
               <i class="bi bi-circle"></i><span>LTH MVRV</span>
             </a>
           </li>
