--- a/lth_realized_price.html
+++ b/lth_realized_price.html
@@ -210,7 +210,7 @@
             </a>
           </li>
           <li>
-            <a href="lth_realized_price.html">
+            <a href="lth_realized_price.html" class="active">
               <i class="bi bi-circle"></i><span>LTH Realized Price</span>
             </a>
           </li>
