--- a/montecarlo_100.html
+++ b/montecarlo_100.html
@@ -436,7 +436,7 @@
             </a>
           </li>
           <li>
-            <a href="montecarlo_100.html">
+            <a href="montecarlo_100.html" class="active">
               <i class="bi bi-circle"></i><span>Montecarlo next 100 days</span>
             </a>
           </li>
