--- a/montecarlo_365_dark.html
+++ b/montecarlo_365_dark.html
@@ -441,7 +441,7 @@
             </a>
           </li>
           <li>
-            <a href="montecarlo_365_dark.html">
+            <a href="montecarlo_365_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Montecarlo last 365 days</span>
             </a>
           </li>
