--- a/mvrv_dark.html
+++ b/mvrv_dark.html
@@ -230,7 +230,7 @@
             </a>
           </li>
           <li>
-            <a href="mvrv_dark.html">
+            <a href="mvrv_dark.html" class="active">
               <i class="bi bi-circle"></i><span>MVRV Z-Score</span>
             </a>
           </li>
