--- a/mvrv_ratio.html
+++ b/mvrv_ratio.html
@@ -235,7 +235,7 @@
             </a>
           </li>
           <li>
-            <a href="mvrv_ratio.html">
+            <a href="mvrv_ratio.html" class="active">
               <i class="bi bi-circle"></i><span>MVRV Ratio</span>
             </a>
           </li>
