--- a/ohlc.html
+++ b/ohlc.html
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li>
-            <a href="ohlc.html">
+            <a href="ohlc.html" class="active">
               <i class="bi bi-circle"></i><span>OHLC</span>
             </a>
           </li>
