--- a/open_interest_futures.html
+++ b/open_interest_futures.html
@@ -431,7 +431,7 @@
             </a>
           </li>
           <li>
-            <a href="open_interest_futures.html">
+            <a href="open_interest_futures.html" class="active">
               <i class="bi bi-circle"></i><span>Open Interest Futures</span>
             </a>
           </li>
