--- a/pi_cycle_dark.html
+++ b/pi_cycle_dark.html
@@ -139,7 +139,7 @@
             </a>
           </li>
           <li>
-            <a href="pi_cycle_dark.html">
+            <a href="pi_cycle_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Pi Cycle</span>
             </a>
           </li>
