--- a/realized_price_g_dark.html
+++ b/realized_price_g_dark.html
@@ -185,7 +185,7 @@
         </a>
         <ul id="market-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="realized_price_g_dark.html">
+            <a href="realized_price_g_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Realized and Delta Price</span>
             </a>
           </li>
