--- a/realized_profit_loss_ratio.html
+++ b/realized_profit_loss_ratio.html
@@ -270,7 +270,7 @@
             </a>
           </li>
           <li>
-            <a href="realized_profit_loss_ratio.html">
+            <a href="realized_profit_loss_ratio.html" class="active">
               <i class="bi bi-circle"></i><span>Net Realized Profit and Loss</span>
             </a>
           </li>
