--- a/sopr_dark.html
+++ b/sopr_dark.html
@@ -215,7 +215,7 @@
             </a>
           </li>
           <li>
-            <a href="sopr_dark.html">
+            <a href="sopr_dark.html" class="active">
               <i class="bi bi-circle"></i><span>SOPR</span>
             </a>
           </li>
