--- a/sth_mvrv_dark.html
+++ b/sth_mvrv_dark.html
@@ -240,7 +240,7 @@
             </a>
           </li>
           <li>
-            <a href="sth_mvrv_dark.html">
+            <a href="sth_mvrv_dark.html" class="active">
               <i class="bi bi-circle"></i><span>STH MVRV</span>
             </a>
           </li>
