--- a/sth_sopr.html
+++ b/sth_sopr.html
@@ -220,7 +220,7 @@
             </a>
           </li>
           <li>
-            <a href="sth_sopr.html">
+            <a href="sth_sopr.html" class="active">
               <i class="bi bi-circle"></i><span>STH SOPR</span>
             </a>
           </li>
