--- a/bitcoin_aviv_g.html
+++ b/bitcoin_aviv_g.html
@@ -255,7 +255,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_aviv_g.html">
+            <a href="bitcoin_aviv_g.html" class="active">
               <i class="bi bi-circle"></i><span>AVIV Ratio</span>
             </a>
           </li>
