--- a/bitcoin_distribution_coin_g_humpback_dark.html
+++ b/bitcoin_distribution_coin_g_humpback_dark.html
@@ -303,7 +303,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_distribution_coin_g_humpback_dark.html">
+            <a href="bitcoin_distribution_coin_g_humpback_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Coins Humpback > 10K BTC</span>
             </a>
           </li>
