--- a/bitcoin_dominance_g.html
+++ b/bitcoin_dominance_g.html
@@ -416,7 +416,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_dominance_g.html">
+            <a href="bitcoin_dominance_g.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Dominance</span>
             </a>
           </li>
