--- a/bitcoin_halving_radar_g.html
+++ b/bitcoin_halving_radar_g.html
@@ -157,7 +157,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_halving_radar_g.html">
+            <a href="bitcoin_halving_radar_g.html" class="active">
               <i class="bi bi-circle"></i><span>Bitcoin Halving Radar </span>
             </a>
           </li>
