--- a/bitcoin_liveliness_g_dark.html
+++ b/bitcoin_liveliness_g_dark.html
@@ -275,7 +275,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_liveliness_g_dark.html">
+            <a href="bitcoin_liveliness_g_dark.html" class="active">
               <i class="bi bi-circle"></i><span>Bitcoin Liveliness</span>
             </a>
           </li>
