--- a/bitcoin_price_usd_g.html
+++ b/bitcoin_price_usd_g.html
@@ -114,7 +114,7 @@
         </a>
         <ul id="components-nav" class="nav-content" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="bitcoin_price_usd_g.html">
+            <a href="bitcoin_price_usd_g.html" class="active">
               <i class="bi bi-circle"></i><span>Bitcoin Price</span>
             </a>
           </li>
