--- a/bitcoin_year_candle_g.html
+++ b/bitcoin_year_candle_g.html
@@ -162,7 +162,7 @@
             </a>
           </li>
           <li>
-            <a href="bitcoin_year_candle_g.html">
+            <a href="bitcoin_year_candle_g.html" class="active">
               <i class="bi bi-circle"></i><span>Candles Yearly</span>
             </a>
           </li>
