--- a/cdd.html
+++ b/cdd.html
@@ -260,7 +260,7 @@
             </a>
           </li>
           <li>
-            <a href="cdd.html">
+            <a href="cdd.html" class="active">
               <i class="bi bi-circle"></i><span>Coins Days Destroyed</span>
             </a>
           </li>
