--- a/lth_mvrv.html
+++ b/lth_mvrv.html
@@ -245,7 +245,7 @@
             </a>
           </li>
           <li>
-            <a href="lth_mvrv.html">
+            <a href="lth_mvrv.html" class="active">
               <i class="bi bi-circle"></i><span>LTH MVRV</span>
             </a>
           </li>
