--- a/lth_sopr_dark.html
+++ b/lth_sopr_dark.html
@@ -225,7 +225,7 @@
             </a>
           </li>
           <li>
-            <a href="lth_sopr_dark.html">
+            <a href="lth_sopr_dark.html" class="active">
               <i class="bi bi-circle"></i><span>LTH SOPR</span>
             </a>
           </li>
