--- a/moving_average_dark.html
+++ b/moving_average_dark.html
@@ -124,7 +124,7 @@
             </a>
           </li>
           <li>
-            <a href="moving_average_dark.html">
+            <a href="moving_average_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Moving Average</span>
             </a>
           </li>
