--- a/mvrv.html
+++ b/mvrv.html
@@ -230,7 +230,7 @@
             </a>
           </li>
           <li>
-            <a href="mvrv.html">
+            <a href="mvrv.html" class="active">
               <i class="bi bi-circle"></i><span>MVRV Z-Score</span>
             </a>
           </li>
