--- a/nupl_dark.html
+++ b/nupl_dark.html
@@ -200,7 +200,7 @@
             </a>
           </li>
           <li>
-            <a href="nupl_dark.html">
+            <a href="nupl_dark.html" class="active">
               <i class="bi bi-circle"></i><span>NUPL</span>
             </a>
           </li>
