--- a/sp500_gold_dark.html
+++ b/sp500_gold_dark.html
@@ -406,7 +406,7 @@
             </a>
           </li>
           <li>
-            <a href="sp500_gold_dark.html">
+            <a href="sp500_gold_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC, S&P500, Gold, Tesla</span>
             </a>
           </li>
