--- a/sth_realized_price.html
+++ b/sth_realized_price.html
@@ -205,7 +205,7 @@
             </a>
           </li>
           <li>
-            <a href="sth_realized_price.html">
+            <a href="sth_realized_price.html" class="active">
               <i class="bi bi-circle"></i><span>STH Realized Price</span>
             </a>
           </li>
