--- a/realized_price_g.html
+++ b/realized_price_g.html
@@ -183,7 +183,7 @@
         <a class="nav-link collapsed" data-bs-target="#market-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-layout-text-window-reverse"></i><span>Market</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="market-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+        <ul id="market-nav" class="nav-content" data-bs-parent="#sidebar-nav">
           <li>
             <a href="realized_price_g.html" class="active">
               <i class="bi bi-circle"></i><span>Realized and Delta Price</span>
