--- a/bitcoin_distribution_coins_tables_dark.html
+++ b/bitcoin_distribution_coins_tables_dark.html
@@ -286,7 +286,7 @@
         <a class="nav-link collapsed" data-bs-target="#address-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-layout-text-window-reverse"></i><span>Address</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="address-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+        <ul id="address-nav" class="nav-content" data-bs-parent="#sidebar-nav">
           <li>
             <a href="bitcoin_distribution_coins_tables_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Coins Distribution</span>
