--- a/bitcoin_price_g_log_dark.html
+++ b/bitcoin_price_g_log_dark.html
@@ -150,7 +150,7 @@
         <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-journal-text"></i><span>Halving</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="forms-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+        <ul id="forms-nav" class="nav-content" data-bs-parent="#sidebar-nav">
           <li>
             <a href="bitcoin_price_g_log_dark.html" class="active">
               <i class="bi bi-circle"></i><span>BTC Price Log</span>
