--- a/distribution_addr_whale.html
+++ b/distribution_addr_whale.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="Address Humpback 1K to 10K BTC" name="keywords">
+  <meta content="Address Whalek 1K to 10K BTC" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
