--- a/distribution_coin_whale_dark.html
+++ b/distribution_coin_whale_dark.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="Address Whalek 1K to 10K BTC" name="keywords">
+  <meta content="Coins Whale Addresses 1K to 10K BTC" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -338,7 +338,7 @@
             </a>
           </li>
           <li>
-            <a href="distribution_addr_whale_dark.html" class="active">
+            <a href="distribution_addr_whale_dark.html">
               <i class="bi bi-circle"></i><span>Addr Whale 1K - 10K BTC</span>
             </a>
           </li>
@@ -486,7 +486,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="600px" src="graphics/distribution_addr_whale_dark.html" allow="fullscreen" title="Address Whale 1K to 10 BTC" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="graphics/distribution_coin_whale_dark.html" allow="fullscreen" title="Coins Whale Addresses 1K to 10 BTC" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
