--- a/graphics/fear_greed_dark.html
+++ b/graphics/fear_greed_dark.html
@@ -124,7 +124,7 @@
                 yAxis: 1
             }, {
                 id:'fear_and_greed',
-                name: 'Fear_and_Greed',
+                name: 'Fear and Greed',
                 data: data_fear_greed,
                 tooltip: {
                     valueDecimals: 2
