--- a/graphics/lth_heatmap_dark.html
+++ b/graphics/lth_heatmap_dark.html
@@ -36,7 +36,7 @@
                 },
 
                 title: {
-                    text: '<a href="https://charts.bgeometrics.com/lth_realized_price.html" target="_blank" style="color:#dddddd">LTH Realized Price minus BTC Price in the last 4 years</a>',
+                    text: '<a href="https://charts.bgeometrics.com/lth_realized_price.html" target="_blank" style="color:#dddddd">LTH Realized Price - BTC Price in the last 4 years</a>',
                     align: 'left',
                     style: {
                         fontSize: '14px'
