--- a/graphics/open_interest_futures_dark.html
+++ b/graphics/open_interest_futures_dark.html
@@ -166,7 +166,7 @@
 
             series: [{
                 name: 'BTC price',
-                color: 'black',
+                //color: 'black',
                 data: data_price,
                 type: 'line',
                 zIndex: 3,
