--- a/graphics/m2_dark.html
+++ b/graphics/m2_dark.html
@@ -77,7 +77,7 @@
                 }
             },
             title: {
-                text: 'M2 Money Stock FED',
+                text: 'M2 Money Stock FRED',
                 align: 'left',
             },
 
