--- a/m2_dark.html
+++ b/m2_dark.html
@@ -510,6 +510,26 @@
 
       </div>
     </section>
+    <br>
+    <section>
+      <div class="container">
+        <a href="graphics/m2.html">
+          <h5>M2 Money Stock FRED</h5>
+        </a>
+        <p> 
+	  The M2 Money Stock is a measure of the amount of money available in an economy, which includes various types of liquid assets.
+          <br><br>
+	  In the graph, the "M2 Money Stock" refers to the US money supply issued by the FRED (Federal Reserve Economic Data).
+          <br><br>
+	  M2 includes cash in circulation, demand deposits in financial institutions (such as checking accounts), time deposits in financial institutions, money market funds, and other liquid assets.
+          <br><br>
+	  The M2 is a metric that economists and economic policy makers use to monitor the amount of money available in the economy and to understand liquidity conditions.
+          <br><br>
+	  Control of the money supply is a key tool used by central banks to influence economic conditions, such as inflation and economic growth.
+        </p>
+      </div>
+
+    </section>
 
   </main><!-- End #main -->
 
