--- a/tools/web-generation-end-m2.html
+++ b/tools/web-generation-end-m2.html
@@ -17,7 +17,7 @@
           <br><br>
 	  The graph shows the growth of M2 by subtracting the value of the current month from the previous month.
           <br><br>
-	  Data is taken from <a href='https://fred.stlouisfed.org/series/M2SL'>fred.stlouisfed.org</a>
+	  Data is taken from <a href='https://fred.stlouisfed.org/'>fred.stlouisfed.org</a>
         </p>
       </div>
 
