--- a/graphics/m2.html
+++ b/graphics/m2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>M2 Money Stock Growth FRED (Federal Reserve Economic Data)</title>
+    <title>Bitcoin and M2 Money Stock Growth FRED (Federal Reserve Economic Data)</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -75,7 +75,7 @@
                 }
             },
             title: {
-                text: 'M2 Money Stock Growth FRED',
+                text: 'Bitcoin and M2 Money Stock Growth FRED',
                 align: 'left',
             },
 
